# t3code

./: .env.example  .gitignore  .mcp.json  AGENTS.md  README.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  t3.json
.agents/skills/ios-debugger-agent/: LICENSE  SKILL.md
.codex/: config.toml
.github/workflows/: ci.yml  deploy-relay.yml  desktop-build.yml  mobile-eas-preview.yml  mobile-eas-production.yml  mobile-showcase-screenshots.yml  release.yml  sync-upstream.yml
.macroscope/check-run-agents/: effect-service-conventions.md
.plans/: t3-connect-remote-setup.html
apps/marketing/: package.json  vercel.ts
apps/mobile/: README.md  app.config.ts  eas.json  global.css  metro.config.js  package.json
apps/mobile/modules/t3-terminal/android/src/main/cpp/: CMakeLists.txt  t3_terminal_jni.cpp
apps/server/: package.json  vite.config.test.ts  vite.config.ts
apps/web/: vite.config.ts
assets/: README.md
docs/: README.md
docs/architecture/: overview.md  remote.md  server-updates.md
docs/cloud/: t3-connect-clerk.md
docs/operations/: ci.md  effect-fn-checklist.md  observability.md  release.md
docs/providers/: pi.md
docs/reference/: scripts.md
docs/user/: background-service.md  remote-access.md  server-updates.md
patches/: @react-navigation%2Fnative-stack@7.17.6.patch
scripts/: build-desktop-artifact.test.ts  build-desktop-artifact.ts  dev-runner.test.ts  dev-runner.ts  export-brand-icons.ts
scripts/lib/: brand-assets.test.ts  brand-assets.ts  desktop-server-dependencies.ts  icon-export.test.ts  icon-export.ts  public-config.ts
(+586 files in other folders)
